<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/background"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/current_text"
                android:text="@string/current_reading_text"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_25"
                android:layout_centerHorizontal="true">
            </androidx.appcompat.widget.AppCompatTextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/current_text"
                android:layout_marginTop="@dimen/dp_15"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:text="@string/left_reading_text"
                    android:textSize="@dimen/sp_25"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content">
                </androidx.appcompat.widget.AppCompatTextView>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/right_reading_text"
                    android:textSize="@dimen/sp_25"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content">
                </androidx.appcompat.widget.AppCompatTextView>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/current_activation"
                android:text="@string/current_activation_text"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_25"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_35">
            </androidx.appcompat.widget.AppCompatTextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/current_activation"
                android:layout_marginTop="@dimen/dp_15"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:text="@string/left_activation_text"
                    android:textSize="@dimen/sp_25"
                    android:layout_weight="1"
                    android:id="@+id/activationTemp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content">
                </androidx.appcompat.widget.AppCompatTextView>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:text="@string/right_activation_text"
                    android:textSize="@dimen/sp_25"
                    android:gravity="center"
                    android:id="@+id/activationPer"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content">
                </androidx.appcompat.widget.AppCompatTextView>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:text="@string/raise_text"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:gravity="center"
                android:id="@+id/tempRaise"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:layout_height="@dimen/dp_60">
            </androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:text="@string/raise_text"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:gravity="center"
                android:id="@+id/perRaise"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:layout_height="@dimen/dp_60">
            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/dp_35"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:text="@string/lower_text"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:gravity="center"
                android:id="@+id/tempLower"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:layout_height="@dimen/dp_60">
            </androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:text="@string/lower_text"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:gravity="center"
                android:id="@+id/perLower"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:layout_height="@dimen/dp_60">
            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_35"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_width="@dimen/dp_250"
                android:layout_centerHorizontal="true"
                android:id="@+id/spinner"
                android:textAlignment="center"
                android:padding="@dimen/dp_10"
                android:background="@color/white"
                android:layout_height="wrap_content">
            </Spinner>
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>